# context-generator

./: .gitignore  .goreleaser.yml  Cargo.toml  Dockerfile  README.md  cmd.go  exclusions.yaml  go.mod  main.go
.github/workflows/: releasing.yaml  testing-commit.yaml  testing-pull-request.yaml
cmd/: root.go
internal/filter/: filter.go  filter_test.go
internal/scanner/: scanner.go  scanner_test.go
src/: cli.rs  filter.rs  lib.rs  main.rs  scanner.rs
