[package]
name = "context-generator"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A command-line tool that generates copy-pastable context from your source code"
authors = ["Patrick D'appollonio <hey@patrickdap.com>"]
license = "MIT"
repository = "https://github.com/patrickdappollonio/context-generator"
readme = "README.md"
keywords = ["cli", "context", "ai", "source-code", "scanning"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
glob = "0.3"
mime_guess = "2.0"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
debug = 0         # No debug information

[[bin]]
name = "context-generator"
path = "src/main.rs"
